feat: update snowflake
